@@ -2139,9 +2139,11 @@ static void _slurm_rpc_job_sbcast_cred(slurm_msg_t * msg)
 		       job_info_msg->job_id, uid,
 		       slurm_strerror(error_code));
 		slurm_send_rc_msg(msg, error_code);
-	} else if ((sbcast_cred = create_sbcast_cred(slurmctld_config.cred_ctx,
-						     job_ptr->job_id,
-						     job_ptr->nodes)) == NULL){
+	} else if ((sbcast_cred =
+		    create_sbcast_cred(slurmctld_config.cred_ctx,
+				       job_ptr->job_id,
+				       job_ptr->nodes,
+				       job_ptr->end_time)) == NULL){
 		unlock_slurmctld(job_read_lock);
 		error("_slurm_rpc_job_sbcast_cred JobId=%u cred create error",
 		      job_info_msg->job_id);
