@@ -14,6 +14,9 @@ documents those changes that are of interest to users and admins.
  -- BLUEGENE - updated documentation.
  -- Close the batch job's environment file when it contains no data to avoid
     leaking file descriptors.
+ -- Fix sbcast's credential to last till the end of a job instead of the
+    previous 20 minute time limit.  The previous behavior would fail for
+    large files 20 minutes into the transfer.
 
 * Changes in SLURM 2.4.2
 ========================
